# assay

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  PRESERVATION-CHECKLIST.md  README.md  environment.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: chemkit-method-gate.sh
.github/workflows/: ci.yml
benchmarks/: BENCHMARK-DESIGN.md  collect_results.py  fetch_geometries.py  fidelity_driver.py  plot_token_usage.py  probe_o3_encoding.py  probe_specs.py  prune_errored_runs.py  run_suite.py  scaffold_suites.py  spec_schema.py
benchmarks/fidelity/: .env.example  README.md  h2o_sp_xtb.spec.json  recorded_fail.json  recorded_pass.json  spec.template.json
benchmarks/fidelity/build-validation/: summary.csv
benchmarks/fidelity/conformational-analysis-validation/: summary.csv
benchmarks/fidelity/conformer-search-validation/: summary.csv
benchmarks/fidelity/electrostatics-validation/: summary.csv
benchmarks/fidelity/frontier-orbitals-validation/: summary.csv
benchmarks/fidelity/fukui-reactivity-validation/: benzaldehyde_fukui_reactivity.spec.json  phenol_fukui_reactivity.spec.json  summary.csv
benchmarks/fidelity/geometry-optimize-validation/: summary.csv
benchmarks/fidelity/logp-partition-validation/: summary.csv
benchmarks/fidelity/pka-acidity-validation/: summary.csv
benchmarks/fidelity/redox-potential-validation/: summary.csv
benchmarks/fidelity/single-point-validation/: README.md  summary.csv
benchmarks/fidelity/solvation-validation/: summary.csv
benchmarks/fidelity/vibrational-analysis-validation/: summary.csv
benchmarks/fidelity/visualize-orbitals-validation/: summary.csv
claude/: conformational_analysis.md  redox_potential.md
data/: _style.py  accuracy_per_skill.csv  efficiency_per_skill.csv  heatmap-4models.py  heatmap-with-warnings.py  per_model_summary.csv  plot_accuracy.py  plot_combined.py  plot_efficiency.py  token_table.tex
mcp_server/: README.md  __init__.py  agent.py  agent_cli.py  requirements.txt  server.py
mcp_server/_engine/: calculators.py  cli.py  integrity.py  schema.py
mcp_server/_engine/tasks/: binding.py  build.py  electrostatics.py  freq.py  frontier.py  irc.py  logp.py  opt.py  orbitals.py  pka.py  reaction_profile.py  redox.py  scan.py  solvation.py  sp.py  ts.py
mcp_server/chemkit_engine/: arg_spec.py  calculators.py  cli.py  constants.py  integrity.py  io.py  resolve.py  result_schema.py  schema.py
mcp_server/chemkit_engine/tasks/: _mopac_parsers.py  binding.py  build.py  confsearch.py  electrostatics.py  freq.py  frontier.py  fukui.py  irc.py  logp.py  opt.py  orbitals.py  pka.py  reaction_energy.py  reaction_profile.py  redox.py  resolve_name.py  scan.py  solvation.py  sp.py  ts.py
mcp_server/examples/openai_agents/: README.md  run_chemkit_agent.py
rules/: calculation-reporting-standards.md  research-standards.md  skill-standards.md  workflow-standards.md
skills/: RESULT-READING.md  _mcp_client.py  binding_energy.md  build_from_smiles.md  conformational_analysis.md  conformer_search.md  electrostatics.md  frontier_orbitals.md  fukui.md  geometry_optimize.md  irc.md  logp.md  pka.md  reaction_energy.md  reaction_profile.md  redox_potential.md  single_point_energy.md  solvation.md  transition_state.md  vibrational_analysis.md
skills/binding-energy/: SKILL.md
skills/binding-energy/scripts/: binding-energy.py
skills/binding_energy/: SKILL.md  binding_energy.py
skills/binding_energy/_engine/: io.py  schema.py
skills/build-from-smiles/: SKILL.md
skills/build-from-smiles/scripts/: build-from-smiles.py
skills/build_from_smiles/: SKILL.md  build_from_smiles.py  requirements.txt
skills/conformational-analysis/: SKILL.md
skills/conformational_analysis/: SKILL.md  conformational_analysis.py  requirements.txt
skills/conformer-search/: SKILL.md
skills/conformer-search/scripts/: conformer-search.py
skills/conformer_search/: SKILL.md  conformer_search.py  requirements.txt
skills/electrostatics/: SKILL.md  electrostatics.py
skills/frontier-orbitals/: SKILL.md
skills/frontier_orbitals/: SKILL.md  frontier_orbitals.py  requirements.txt
skills/fukui/: SKILL.md  fukui.py
skills/fukui-reactivity/: SKILL.md
skills/geometry-optimize/: SKILL.md
skills/geometry_optimize/: SKILL.md  geometry_optimize.py
skills/intrinsic-reaction-coordinate/: SKILL.md
skills/irc/: SKILL.md  irc.py
skills/logp/: SKILL.md  logp.py
skills/logp-partition/: SKILL.md
skills/name-to-smiles/: SKILL.md  requirements.txt
skills/pka/: SKILL.md  pka.py
skills/pka-acidity/: SKILL.md
skills/reaction-energy/: SKILL.md
skills/reaction-profile/: SKILL.md
skills/reaction_energy/: SKILL.md  reaction_energy.py
skills/reaction_profile/: SKILL.md  reaction_profile.py  requirements.txt
skills/redox-potential/: SKILL.md
skills/redox_potential/: SKILL.md  redox_potential.py
skills/single-point-energy/: SKILL.md
skills/single_point_energy/: SKILL.md  single_point_energy.py
skills/solvation/: SKILL.md  requirements.txt  solvation.py
skills/transition-state/: SKILL.md
skills/transition_state/: SKILL.md  transition_state.py
skills/vibrational-analysis/: SKILL.md
skills/vibrational_analysis/: SKILL.md  vibrational_analysis.py
skills/visualize-orbitals/: SKILL.md
skills/visualize_orbitals/: SKILL.md  visualize_orbitals.py
src/chemkit/: calculators.py  cli.py  io.py  resolve.py  schema.py
tests/: conftest.py  test_cli_interface.py  test_regression.py  water.xyz  water_sp_xtb.err  water_sp_xtb.json
tests/fixtures/: cl_minus.xyz  f_minus.xyz  h2.xyz  h2o.xyz  h2o2.xyz  h_atom.xyz  hcn_ts_guess.xyz  hydroquinone.xyz  no3_minus.xyz  o2.xyz
tools/: README.md  architecture_diagram.py  architecture_poster.py  argo_concurrency_probe.sh  assay_logo.py  aurora.example.yaml  aurora_autorelaunch.sh  aurora_nodeholder.pbs  aurora_submit.py  aurora_sweep_controller.sh  aurora_sweep_submit.sh  build_skill_folders.py  check_nodes.sh  clarify_spec_prompts.py  lint_skills.py  parallel_suite.sh  skill_orbit_diagram.py  stop_sweep.sh  worked_example_card.py
workflows/: name-to-3d-structure.md
(+83861 files in other folders)
