[project]
name = "chem-skills"
version = "1.0.0"
description = "Self-contained computational-chemistry skills (xtb, MOPAC, PySCF, Open Babel)"
requires-python = ">=3.9"

# This project is no longer a single installable package. Each skill under
# skills/<name>/ is self-contained and run directly:
#     python skills/<name>/<name>.py --help
# Install a skill's Python dependencies from its own requirements.txt:
#     pip install -r skills/<name>/requirements.txt
# External binaries (xtb, mopac, openbabel) are installed separately, e.g.:
#     conda install -c conda-forge xtb mopac openbabel ase

[tool.pytest.ini_options]
markers = [
    "slow: tests that take >30 s (organics, multi-step pipelines)",
]
