[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemkit-mcp"
# Single-sourced from chemkit_engine.__version__ (see [tool.setuptools.dynamic]).
dynamic = ["version"]
description = "chemkit: computational-chemistry MCP server (xtb, MOPAC, PySCF, Open Babel) over stdio"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Evan S. Robles" }]
keywords = ["chemistry", "mcp", "computational-chemistry", "xtb", "mopac", "pyscf", "ase"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Chemistry",
]
# ALL pip-installable runtime deps — no extras, everything installs by default.
#   pyscf/matplotlib : --method dft/hf + plots
#   sella            : transition-state saddle search (tasks/ts.py)
#   rdkit            : structure handling (tasks/scan.py + benchmark driver)
#   openai           : live agent scoring in the fidelity benchmark harness
# The engine imports the heavy ones lazily, so importing chemkit stays cheap even
# though they're all declared here.
#
# NOT listed (cannot be pip-installed — install from conda-forge via environment.yml):
# the external binaries xtb / mopac / openbabel, AND `xtb-python` (the `import xtb`
# API; there is NO PyPI wheel for it).
dependencies = [
  "mcp",
  "ase>=3.22",
  "numpy",
  "pyscf",
  "matplotlib",
  "sella",
  "rdkit",
  "openai",
  "pyyaml",     # config read/write for tools/aurora_submit.py + input_configs.yaml
]

[project.scripts]
# assay         : human-facing CLI — runs ONE calculation through the MCP server
#                 (`assay sp --method xtb mol.xyz`). Routes via the same path as
#                 the skill scripts, so the live .out log + level-of-theory and
#                 integrity gates all apply.
# assay-mcp     : starts the stdio MCP server (for agents to connect to).
assay     = "mcp_server.server:cli_main"
assay-mcp = "mcp_server.server:main"

[project.urls]
Homepage   = "https://github.com/evan-robles/assay"
Repository = "https://github.com/evan-robles/assay"

[tool.setuptools]
# Two top-level installs: mcp_server (server; entry target) and chemkit_engine (the
# engine, imported by the per-call subprocess as `-m chemkit_engine.cli`). package-dir
# maps the import name chemkit_engine to its on-disk home mcp_server/chemkit_engine so
# the source stays nested while the name is importable top-level after install.
# Explicit list (autodiscovery is confused by the dual-top-level + package-dir remap).
packages = ["mcp_server", "chemkit_engine", "chemkit_engine.tasks",
            "chemkit_engine.backends", "chemkit_engine.backends.pyscf"]

[tool.setuptools.package-dir]
"chemkit_engine" = "mcp_server/chemkit_engine"

# Version is read from chemkit_engine/__init__.py::__version__ at build time, so
# the package has ONE version source (no pyproject<->__init__ drift).
[tool.setuptools.dynamic]
version = { attr = "chemkit_engine.__version__" }

[tool.pytest.ini_options]
markers = [
    "slow: tests that take >30 s (organics, multi-step pipelines)",
]
